Fix for low contrast drawer text

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@
   --primary: oklch(0.5718 0.2177 16.6086);
   --primary-foreground: oklch(0.998 0.001 87.47);
   --secondary: oklch(0.2703 0.1252 262.0233);
-  --secondary-foreground: oklch(12.773% 0.01082 259.659);
+  --secondary-foreground: oklch(0.985 0.001 87.47);
   --muted: oklch(0.9674 0.002 87.47);
   --muted-foreground: oklch(0.552 0.0153 87.47);
   --accent: oklch(0.9016 0.0471 224.0906);
